[project]
name = "raijuu"
version = "0.0.1"
description = "PE reconstructor for Qiling"
authors = [
    {name = "Avery Warddhana", email="them@nullablevo.id.au"},
]
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
classifiers = [
]
dependencies = [
	"qiling",
	"lief"
]

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "mypy"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["raijuu"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
	"qiling.*",
	"lief"
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88

